Fix Safari background overflow with clip-path: inset(0)

--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ body {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    clip-path: inset(0);
+    -webkit-clip-path: inset(0);
 }
 
 .background-layer {
